--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
 
 }
 
-#inputTexto {
+#campoTexto{
     width: 350px;
     height: 310px;
     border-radius: 15px;
@@ -138,7 +138,7 @@ body {
 
 
 
-#inputTexto::placeholder  {
+#campoTexto::placeholder  {
     width: 294px;
     height: 25px;
     color: var(--cor-terciaria);
@@ -181,7 +181,7 @@ body {
 }
 
 
-#outputTexto {
+#campoTexto2 {
     width: 350px;
     height: 310px;
     border-radius: 15px;
