--- a/style.css
+++ b/style.css
@@ -1,384 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --cor-primaria: #EEF5FF;
-    --cor-secundaria:#B4D4FF;
-    --cor-terciaria: #86B6F6;
-    --cor-quartenaria: #176B87;
-    --cor-hover: #0d7bc4;
-
+    --cor-primaria: #bcc8da;
+    --cor-secundaria: #042f3d;
+    --cor-terciaria: #f6dc86;
+    --cor-quartenaria: #07495f;
+    --cor-hover: #0362a1;
     --fonte-principal: 'Montserrat', sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
-
 }
 
 body {
-    /* height 100vh; */
     box-sizing: border-box;
     background-color: var(--cor-primaria);
-
 }
 
 .cabecalho {
-    /* padding: 50px 80px 92px; */
-    padding: 20px 80px 70px;
     display: flex;
+    padding: 30px 80px 70px;
     flex-direction: row;
     align-items: center;
-
 }
 
-.cabecalho_logo {
-    width: 120px;
-    height: 48px;
-    box-shadow: none;
-
+.cabecalho_logo  {
+    width: 183px;
+    height: 80px;
 }
-
-.cabecalho_menu  {
+.cabecalho_menu {
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
     transform: translate(740%);
-
 }
 
-.cabecalho_menu_link {
+.cabelho_menu_link{
     display: flex;
     justify-content: flex-end;
     width: 60px;
     height: 30px;
     cursor: pointer;
-    margin-left: 20px;
-
-
 }
-/* calcular por rem valor /16 */
-.decodificador {
-    padding: 0px 80px;
-    height: 34rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-
-}
-
-.decodificador_entrada {
-    width: 53.06rem;
-    display: flex;
-    flex-direction: column;
-
-}
-
-.decodificador_entrada_titulos {
-    color: var(--cor-quartenaria);
-    font-family: var(--fonte-principal);
-
-}
-
-.decodificador_entrada_paragrafo {
-    font-size: 38px;
-    font-weight: 400;
-    padding-bottom: 10px;
-
-}
-
-.img_frame {
-    margin-top: 20px;
-}
-
-.decodificador_entrada_aviso {
-    font-size: 12px;
-    font-weight: 500;
-
-}
-
-.decodificador_caixatxt {
-    display: flex;
-    flex-direction: row;
-    padding-top: 56px;
-    justify-content: space-between;
-
-}
-
-.decodificador_caixatxt_entrada,
-.decodificador_caixatxt_saida {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-overflow: ellipsis;
-    gap: 10px;
-    align-items:center;
-
-
-}
-
-#campoTexto{
-    width: 350px;
-    height: 310px;
-    border-radius: 15px;
-    background-color: var(--cor-quartenaria);
-    border: none;
-    border-style: none;
-    /* gap: 23px; */
-    outline: none;
-    color: var(--cor-terciaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    padding-left: 22px;
-    padding-top: 31px;
-    resize: none;
-}
-
-
-
-#campoTexto::placeholder  {
-    width: 294px;
-    height: 25px;
-    color: var(--cor-terciaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    padding-left: 3px;
-    padding-top: 0px;
-}
-
-.botton-criptografar {
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    width: 120px;
-    height: 20px;
-    border: 2px solid var(--cor-secundaria);
-    border-radius: 9px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 12px;
-    font-weight: 500;
-    padding: 20px;
-    text-decoration: none;
-    cursor: pointer;
-    
-
-
-}
-
-.botton-criptografar:hover {
-    background-color: var(--cor-hover);
-    color: var(--cor-primaria);
-    transition: 2ms;
-    transform: scale(1.2);
-    
-
-}
-
-
-#campoTexto2 {
-    width: 350px;
-    height: 310px;
-    border-radius: 15px;
-    background-color: var(--cor-quartenaria);
-    border: none;
-    border-style: none;
-    /* gap: 23px; */
-    outline: none;
-    color: var(--cor-terciaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    padding-left: 22px;
-    padding-top: 31px;
-    resize: none;
-}
-
-.botton-descriptografar {
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    width: 120px;
-    height: 20px;
-    border: 2px solid var(--cor-secundaria);
-    border-radius: 9px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 12px;
-    font-weight: 500;
-    padding: 20px;
-    text-decoration: none;
-    cursor: pointer;
-
-}
-
-
-.botton-descriptografar:hover {
-    background-color: var(--cor-hover);
-    color: var(--cor-primaria);
-    transition: 2ms;
-    transform: scale(1.2);
-
-}
-
-.botton_copiar {
-    background-color: transparent;
-    width: 24px;
-    height: 24px;
-    color: var(--cor-secundaria);
-    border: none;
-    display: flex;
-    cursor: pointer;
-    position: static;
-
-}
-
-.botton_copiar_icone {
-    padding-top: 28px;
-    padding-left: 10px;
-    transform: translate(-280%);
-    opacity: 85%;
-
-}
-
-   
-
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-    background-color: var(--cor-quartenaria);
-    margin: 15% auto;
-    padding: 8px;
-    border: 10px solid var(--cor-quartenaria);
-    width: 10%;
-    border-radius: 10px;
-}
-
-#modalText {
-    display: flex;
-    justify-content: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 400;
-    align-items: center;
-}
-.decodificador_img {
-    width: 315px;
-    height: 499px;
-    padding-inline-end: 55px;
-    padding-left: 55px;
-    
-    
-}
-
-.rodape {
-    bottom: 0;
-    width: 100%;
-    padding-top: 100px;
-    padding-bottom: 15px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    padding: 1em;
-    position: fixed;
-
-}
-
-.caixa_rodape {
-    width: 300px;
-    height: 23px;
-    color: var(--cor-quartenaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 600;
-
-}
-
-/* aqui vai responsividade */
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .cabecalho_menu {
-      display: flex;
-      align-items: center;
-    }
-
-    .decodificador_entrada,
-    .decodificador_img {
-      width: 80%;
-      margin: 0 auto; 
-    }
-
-    .decodificador_caixatxt {
-      flex-direction: row;
-      justify-content: space-between;
-      gap: 20px; 
-    }
-
-    .decodificador_caixatxt_entrada,
-    .decodificador_caixatxt_saida {
-      flex: 1; 
-    }
-  }
-
-
-@media (max-width: 768px) {
-    
-    .cabecalho {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    
-    .cabecalho_menu {
-      display: none;
-    }
-
-    .decodificador {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .decodificador_entrada,
-    .decodificador_img {
-      width: 100%;
-    }
-
-    .decodificador_caixatxt {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px; 
-    }
-
-    .botton-criptografar,
-    .botton-descriptografar,
-    .botton_copiar {
-      margin: 10px 0; 
-    }
-
-    .rodape {
-        padding-top: 50px;
-    }
-  }
-
