--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ textarea::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 
@@ -135,18 +135,18 @@ textarea::placeholder {
     justify-content: center;
     width: 328px;
     height: 67px;
-    border: 2px solid var(--cor-hover);
+    border: 2px none var(--cor-hover);
     border-radius: 24px;
     text-align: center;
     align-items: center;
     color: var(--cor-primaria);
     font-family: var(--fonte-principal);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     padding: 24px;
     text-decoration: none;
     cursor: pointer;
-    gap: 8px;
+    gap: 15px;
 }
 
 .botao_descripto {
@@ -155,18 +155,27 @@ textarea::placeholder {
     justify-content: center;
     width: 328px;
     height: 67px;
-    border: 2px solid var(--cor-hover);
+    border: 2px none var(--cor-hover);
     border-radius: 24px;
     text-align: center;
     align-items: center;
     color: var(--cor-secundaria);
     font-family: var(--fonte-principal);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 500;
     padding: 24px;
     text-decoration: none;
     cursor: pointer;
-    gap: 8px;
+    gap: 15px;
+}
+
+.botao_cripto:hover {
+    transform: scale(1.1);
+    transition: 1.2ms;
+}
+.botao_descripto:hover {
+    transform: scale(1.1);
+    transition: 1.2ms;
 }
 
 .apresentacao_direita {
@@ -209,7 +218,7 @@ textarea::placeholder {
     justify-content: center;
     width: 328px;
     height: 67px;
-    border: 2px solid var(--cor-hover);
+    border: 2px none var(--cor-hover);
     border-radius: 24px;
     text-align: center;
     align-items: center;
@@ -222,6 +231,11 @@ textarea::placeholder {
     cursor: pointer;
     gap: 20px;
     margin: 30px;
+}
+
+.botao_copiar:hover {
+    transform: scale(1.1);
+    transition: 1.2ms;
 }
 /*criar rodape */
 
