--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     background-color: var(--cor-terciaria);
+    
 }
 /* cabecalho do texto */
 
@@ -200,18 +201,38 @@ textarea::placeholder {
     margin: 10px;
 }
 
-#imagemPerson {
-    width: 336px;
-    height: 304px;
-    margin-top: 5%;
-    /* corrigir imagem */
-}
+
 
 #botaoCopiar {
     font-size: 1.2rem;
     color: var(--cor-secundaria);
 }
 
+#limparCampo {
+    font-size: 1.2rem;
+    color: var(--cor-secundaria);
+}
+
+.limpar_campo {
+    background: var(--cor-decripto);
+    display: flex;
+    justify-content: center;
+    width: 328px;
+    height: 67px;
+    border: 2px none var(--cor-hover);
+    border-radius: 24px;
+    text-align: center;
+    align-items: center;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 500;
+    padding: 32px;
+    text-decoration: none;
+    cursor: pointer;
+    gap: 20px;
+    margin: 30px;
+}
 .botao_copiar {
     background: var(--cor-decripto);
     display: flex;
