--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 .apresentacao {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -81,7 +81,7 @@ body {
 
 }
 
-
+/* área para colocar caixa de texto e criar botoes */
 .apresentacao_esquerda {
     width: 55%;
     height: 85%;
@@ -112,9 +112,14 @@ textarea::placeholder {
 }
 /*caixa de texto criptografia */
 #texto {
+    display: flex;
     font-size: 1.4rem;
-    color: var(--cor-secundaria);
+    color: var(--cor-decripto);
+    font-family: var(--fonte-principal);
+    font-weight: 400;
+    margin-bottom: 25%;
 }
+
 
 #texto2 {
     font-size: 1.1rem;
@@ -179,6 +184,7 @@ textarea::placeholder {
     transition: 1.2ms;
 }
 
+/* caixa do resultado do texto*/
 .apresentacao_direita {
     align-items: center;
     width: 30%;
@@ -187,19 +193,12 @@ textarea::placeholder {
     border-radius: 24px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     padding: 16px;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     
 }
 
-.imagem_person {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px;
-    margin: 10px;
-}
 
 
 
@@ -212,12 +211,12 @@ textarea::placeholder {
     font-size: 1.2rem;
     color: var(--cor-secundaria);
 }
-
+/* limpar texto*/
 .limpar_campo {
     background: var(--cor-decripto);
     display: flex;
     justify-content: center;
-    width: 328px;
+    width: 150px;
     height: 67px;
     border: 2px none var(--cor-hover);
     border-radius: 24px;
@@ -233,11 +232,16 @@ textarea::placeholder {
     gap: 20px;
     margin: 30px;
 }
+
+.limpar_campo:hover {
+    transform: scale(1.1);
+    transition: 1.2ms;
+}    
 .botao_copiar {
     background: var(--cor-decripto);
     display: flex;
     justify-content: center;
-    width: 328px;
+    width: 150px;
     height: 67px;
     border: 2px none var(--cor-hover);
     border-radius: 24px;
