--- a/style.css
+++ b/style.css
@@ -16,54 +16,36 @@
 }
 
 body {
-    width: 100%;
-    box-sizing: border-box;
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
     background-color: var(--cor-terciaria);
+    padding: 5%;
+    box-sizing: border-box;
     
 }
 /* cabecalho do texto */
 
 .cabecalho {
-    display: flex;
-    padding: 30px 80px 70px;
-    flex-direction: row;
-    align-items: center;
+
 }
 
 .cabecalho_logo  {
-    width: 175px;
-    height: 80px;
+
 }
 .cabecalho_menu {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    transform: translate(740%);
+
 }
 .cabelho_menu_link{
-    display: flex;
-    justify-content: flex-end;
-    width: 80px;
-    height: 35px;
-    cursor: pointer;
-    gap: 10px;
+
 }
 
 .apresentacao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
 }
 
 .apresentacao_botao {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 5px;
-    margin-top: 8%;
-    margin-left: 11%;
-    gap: 10px;
-    
+
 }
     
     
@@ -83,119 +65,51 @@ body {
 
 /* área para colocar caixa de texto e criar botoes */
 .apresentacao_esquerda {
-    width: 55%;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+
 }
 
 #campoTexto {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90%;
-    width: 56%;
-    background: transparent;
-    border: none;
-    outline: none;
-    resize: none;
-    font-size: 16px;
-    /*colocar var aqui */
-    font-family: var(--fonte-principal);
+
+    
+
 }
 
 textarea::placeholder {
-    color: var(--cor-hover);
-    font-size: 32px;
+
 }
 /*caixa de texto criptografia */
 #texto {
-    display: flex;
-    font-size: 1.4rem;
-    color: var(--cor-decripto);
-    font-family: var(--fonte-principal);
-    font-weight: 400;
-    margin-bottom: 25%;
+
 }
 
 
 #texto2 {
-    font-size: 1.1rem;
-    color: var(--cor-secundaria);
+
 }
 
 .botao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+
 }
 
 
 
 .botao_cripto {
-    background: var(--cor-hover);
-    display: flex;
-    justify-content: center;
-    width: 328px;
-    height: 67px;
-    border: 2px none var(--cor-hover);
-    border-radius: 24px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-primaria);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 500;
-    padding: 24px;
-    text-decoration: none;
-    cursor: pointer;
-    gap: 15px;
+
 }
 
 .botao_descripto {
-    background: var(--cor-decripto);
-    display: flex;
-    justify-content: center;
-    width: 328px;
-    height: 67px;
-    border: 2px none var(--cor-hover);
-    border-radius: 24px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 500;
-    padding: 24px;
-    text-decoration: none;
-    cursor: pointer;
-    gap: 15px;
+
 }
 
-.botao_cripto:hover {
+.botao_cripto:hover, .botao_descripto:hover {
     transform: scale(1.1);
     transition: 1.2ms;
 }
-.botao_descripto:hover {
-    transform: scale(1.1);
-    transition: 1.2ms;
-}
+
 
 /* caixa do resultado do texto*/
 .apresentacao_direita {
-    align-items: center;
-    width: 30%;
-    height: 625px;
-    background: var(--cor-quartenaria);
-    border-radius: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 16px;
-    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+ 
     
 }
 
@@ -203,59 +117,14 @@ textarea::placeholder {
 
 
 #botaoCopiar {
-    font-size: 1.2rem;
-    color: var(--cor-secundaria);
+
 }
 
-#limparCampo {
-    font-size: 1.2rem;
-    color: var(--cor-secundaria);
-}
-/* limpar texto*/
-.limpar_campo {
-    background: var(--cor-decripto);
-    display: flex;
-    justify-content: center;
-    width: 150px;
-    height: 67px;
-    border: 2px none var(--cor-hover);
-    border-radius: 24px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 500;
-    padding: 32px;
-    text-decoration: none;
-    cursor: pointer;
-    gap: 20px;
-    margin: 30px;
-}
 
-.limpar_campo:hover {
-    transform: scale(1.1);
-    transition: 1.2ms;
-}    
+
+
 .botao_copiar {
-    background: var(--cor-decripto);
-    display: flex;
-    justify-content: center;
-    width: 150px;
-    height: 67px;
-    border: 2px none var(--cor-hover);
-    border-radius: 24px;
-    text-align: center;
-    align-items: center;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-principal);
-    font-size: 14px;
-    font-weight: 500;
-    padding: 32px;
-    text-decoration: none;
-    cursor: pointer;
-    gap: 20px;
-    margin: 30px;
+
 }
 
 .botao_copiar:hover {
@@ -279,5 +148,22 @@ textarea::placeholder {
     font-weight: 400;
     font-style: italic;
 }
+
+@media screen and (min-width: 376px) {
+    .botao {
+        flex-direction: row;
+    }
+}
+
+
+@media screen and (min-width: 769px) {
+    
+}
+
+
+
+  
+
+
 
 
