--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --cor-quartenaria: #07495f;
     --cor-hover: #0A3871;
     --cor-decripto: #FFFBF5;
-    
+
 }
 
 * {
@@ -25,37 +25,40 @@ body {
     background-color: var(--cor-terciaria);
     padding: 6%;
     box-sizing: border-box;
-    
+
 }
+
 /* cabecalho do texto */
 
-.apresentacao_entrada {
+.apresentacaoDeEntrada {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
 
-.cabecalho_logo  {
+.cabecalho_logo {
     width: 175px;
     height: 80px;
 }
-.apresentacao_saida {
+
+.apresentacaoDeSaida {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--cor-decripto);
+    background-color: #af7fffa6;
     border-radius: 2rem;
 }
 
-.textoDeEntrada, .textoDeSaida {
+.textoDeEntrada,
+.textoDeSaida {
     border: none;
     outline: none;
     resize: none;
 }
 
 .textoDeEntrada {
-    font-size: 2rem;   
+    font-size: 2rem;
     background-color: var(--cor-terciaria);
     color: var(--cor-hover);
     flex-grow: 1;
@@ -68,81 +71,76 @@ textarea::placeholder {
 
 .textoDeSaida {
     font-size: 1.2rem;
-    background-color: var(--cor-hover);
+    background-color: #af7fff00;
+    color: white;
     display: none;
     margin: 1.5rem;
     position: relative;
 }
 
-.botao_entrada {
+.botoesDeEntrada {
     display: flex;
     gap: 2rem;
 }
 
-.botao_cripto, .botao_descripto {
+.botao_cripto,
+.botao_descripto {
     width: 20.5rem;
     height: 4.1rem;
     border-radius: 24px;
     cursor: pointer;
     gap: 10px;
-    
+
 }
 
 .botao_cripto {
     border: none;
     background-color: var(--cor-hover);
     color: var(--cor-primaria);
-    
+
 }
 
 .botao_descripto {
     background-color: var(--cor-decripto);
     border-color: var(--cor-quartenaria);
-    
+
 }
 
-.aviso {
+.mensagem {
     text-align: center;
     padding: 1rem;
     margin-top: 40%;
-    
-    
-    
 }
 
-
 .botaoCopiar {
-    width: 22rem;
+    width: 21rem;
     height: 4.1rem;
     border-radius: 1.5rem;
-    background-color: var(--cor-primaria);
-    border-color: var(--cor-hover);
+    background-color: white;
+    border-color: #0A3871;
     display: none;
     margin-bottom: 2rem;
     cursor: pointer;
 }
 
 
-.botao_cripto:hover, .botao_descripto:hover, .botaoCopiar:hover {
+.botao_cripto:hover,
+.botao_descripto:hover,
+.botaoCopiar:hover {
     transform: scale(1.1);
     transition: 1.2ms;
 }
 
 
-
-
-
-.cabecalho_menu_link_img{
+.cabecalho_menu_link_img {
     width: 2em;
 }
 
-
-
 .imagem_exclamacao_texto {
     font-size: 1rem;
-    
 
-    
+
+
 }
 
 .img_exclamacao {
@@ -157,7 +155,13 @@ textarea::placeholder {
     transform: scale(1.1);
     transition: 1.2ms;
 }
+
 /*criar rodape */
+
+.link {
+    text-decoration: none;
+    color: inherit;
+}
 
 .rodape {
     padding: 10px;
@@ -167,7 +171,9 @@ textarea::placeholder {
     position: fixed;
     bottom: 0;
     width: 100%;
+    cursor: pointer;
 }
+
 
 
 
@@ -184,18 +190,18 @@ textarea::placeholder {
         display: none;
     }
 
-    .apresentacao_entrada {
+    .apresentacaoDeEntrada {
         padding-top: 7%;
         height: 70%;
     }
 
-    .apresentacao_saida {
+    .apresentacaoDeSaida {
         width: auto;
         height: auto;
         margin: 5%;
     }
 
-    .botao_entrada {
+    .botoesDeEntrada {
         justify-content: center;
     }
 
@@ -203,6 +209,7 @@ textarea::placeholder {
         height: 20rem;
         padding-top: 0;
     }
+
     .textoDeSaida {
         width: -webkit-fill-available;
         max-height: 10em;
@@ -226,7 +233,7 @@ textarea::placeholder {
 }
 
 @media (max-width: 372px) {
-    .botao_entrada {
+    .botoesDeEntrada {
         flex-direction: column;
         align-items: center;
         gap: 1rem;
